---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2022-04-?
  Changes:
      - Mod settings were added. Biters reseach pack recipe default is 7. Please use value 4 for double technology price or when playing less aggressive enemies worlds.
      To change startup setting Factorio app restart is required. Saved games will use it at next load.
      - Creep miner goes to sleep immediately on last creep tile harvested.
      - Corrosion marginal case fix.
      - +0.5% corrosion DoT.
      - Less painful corrosion strikes: less damage, less often.
      - Fixed circle rendering radius for creep miners.
      - Poison capsule, repair capsule (RA mod) and advanced repair pack (RI mod) biomass costs were halved.
      - Biomass costs for some of RA and RI mods structures and equipment were decreased to be multiple of 15.
---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: 2022-02-06
  Changes:
      - Balance: Electric creep miner. Added small pollution (0.5 per minute).
      - Fixed creep friction abnormal coefficient: vehicles bog down when entering creep, then get +1000% speed until driving out creep area.
      Considering other mod development to make Rampant Arsenal tanks stronger than armor mk3+shotgun vs high tier enemy bases.
      BTW spidertrone (nuclear tank-mk3 with no fuel, no problems for acceleration/braking in creep areas, crazy roof jumper) is a complete cheat and a game spoiler,
      fix is a must (via other mods)
---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: 2022-02-03
  Changes:
      - Added gfx special effects to revenge creep strikes for better understanding what is going on.
      - Hit damage and creep deploy take place only after shell lands. So moving player, car, tank and even spidertron can easily avoid creep counter attacks.