@@ -494,28 +494,7 @@ light-armor=__ITEM__light-armor__
 satellite=__ITEM__satellite__
 
 [technology-description]
-advanced-radar=A more powerful radar with a larger range.
 automation-science-pack=With the breakthrough of the automation core, many previously manual processes can potentially be automated.
-kr-additional-engine=A supplementary engine for vehicles, increasing acceleration and top speed.
-kr-advanced-additional-engine=An even more powerful supplementary engine for vehicles, increasing acceleration and top speed.
-kr-advanced-assembling-machine=A more powerful assembling machine. Has access to some advanced processed for converting ores directly into intermediate products.
-kr-advanced-chemical-plant=A more powerful chemical plant.
-kr-advanced-chemistry=More advanced chemical processes to create even more complex materials.
-kr-advanced-exoskeleton-equipment=A faster exoskeleton.
-kr-advanced-fuel=Even more powerful fuel for your vehicles and equipment.
-kr-advanced-furnace=A more powerful furnace.
-kr-advanced-lab=A more efficient lab. Incompatible with basic tech cards.
-kr-advanced-pickaxe=Increases your mining speed.
-kr-advanced-roboports=More flexible ways to store and recharge your robots.
-kr-advanced-solar-panel=A larger and more capable solar panel infused with imersite.
-kr-advanced-tank=A very heavily armored and slow-moving assault vehicle, outfitted with many kinds of weapons.
-kr-advanced-tech-card=Imersite has unlocked an entirely new category of advanced, efficient machines.
-kr-ai-core=A sentient machine enabling an entirely new class of automation.
-kr-air-purification=Absorb pollution from the atmosphere.
-kr-antimatter-ammo=Disassemble your enemies at the molecular level with this advanced ammunition.
-kr-antimatter-reactor-equipment=A miniaturized antimatter reactor, providing loads of energy for your vehicles and equipment.
-kr-antimatter-reactor=Transform matter into pure electrical energy.
-kr-atmosphere-condensation=Slowly pull gases directly from the atmosphere.
 kr-automation=A more powerful assembling machine. Has access to some advanced processed for converting ores directly into intermediate products.
 kr-automation-core=A standardized, reusable mechanical machine core is the first step towards full automation.
 kr-basic-fluid-handling=Acquire and transport basic fluids.
@@ -528,19 +507,6 @@ kr-efficient-fabrication=More efficient ways of fabricating basic components.
 kr-electric-mining-drill=Enables the automated mining of ores, powered by electricity.
 kr-electric-mining-drill-mk2=Faster and more efficient methods of automatic mining.
 kr-electric-mining-drill-mk3=Faster and more efficient methods of automatic mining.
-kr-energy-control-unit=A powerful transformer used to control energy in electronic parts that have high energy fluctuations.
-kr-energy-shield-mk3-equipment=More effective means of defending yourself.
-kr-energy-shield-mk4-equipment=More effective means of defending yourself.
-kr-energy-storage=More effective means of storing energy.
-kr-enriched-ores=Enriching ores before smelting them greatly improves the yield, but produces some byproducts.
-kr-fluid-excess-handling=Burn any fluid, releasing a large amount of pollution and occasionally some byproducts.
-kr-fluids-chemistry=Advanced chemical processes for producing new materials.
-kr-fuel=Specialized fuel for your vehicles and equipment.
-kr-fusion-energy=Harness the power of a star to produce a massive amount of energy.
-kr-gas-power-station=Burn fluid directly to produce energy.
-kr-greenhouse=Grow wood for harvesting, and cultivate plants for decoration and/or restoration.
-kr-imersite-night-vision-equipment=Optical properties of imersite allow enhanced night vision with even greater clarity.
-kr-imersite-solar-panel-equipment=More capable solar panels for your vehicles and equipment.
 kr-imersium-processing=An exceptionally stiff, very light, and highly conductive alloy. Its high melting point and advanced chemical composition make it extremely capable, but very slow to produce.
 kr-improved-pollution-filter=An improved pollution filter that lasts longer and scrubs pollution more efficiently.
 kr-intergalactic-transceiver=Utilizing a micro-black-hole, this machine allows instantaneous communication with any other transceiver anywhere in the universe. Activating this transceiver will allow you to send a distress call to your home planet so you can hopefully be rescued in the future.
@@ -569,29 +535,12 @@ kr-power-armor-mk4=Imersium alloys and AI-driven bodily enhancement has yielded 
 kr-quantum-computer=Highly specialized research computer, capable of producing very advanced tech cards and research data.
 kr-quarry-minerals-extraction=Enables the extraction and basic processing of imersite.
 kr-radar=Continuously monitors a medium-sized area and periodically scans a large area.
-kr-railgun-turret=An extremely powerful turret specialized in taking out large groups of enemies at once.
-kr-reinforced-plates=Strong, smooth plating that is easy to walk on.
-kr-research-server=Advanced computer, capable of producing complex tech cards.
-kr-robot-battery=A more capable battery for your robots.
-kr-robot-battery-plus=An even more capable battery for your robots.
-kr-rocket-turret=Rapid fire and powerful ammo makes the rocket turret an effective means of dealing with enemy hordes.
 kr-sentinel=Continuously monitors a small area.
-kr-shelter=Upon being wounded, you will retreat to your shelter to heal. Each force may only have one shelter per surface.
 kr-silicon-processing=A hard, brittle substance with extremely poor electrical conduction at room temperature, enabling a wide variety of use in electronics.
-kr-singularity-beacon=A significantly smaller and more powerful beacon.
-kr-singularity-lab=Highly advanced research lab for complex tech cards.
-kr-singularity-tech-card=Methods for advanced spacetime curvature have been discovered, enabling the abuse of the laws of physics to construct even more efficient and mind-bending machines.
 kr-steam-engine=Harness the power of steam to produce energy.
 kr-steel-fluid-handling=Higher quality pipes capable of more throughput.
 kr-steel-fluid-tanks=Larger tanks for storing more fluid.
 kr-stone-processing=With the power of glass, many previously impossible tasks are now feasible.
-kr-superior-exoskeleton-equipment=An even faster exoskeleton.
-kr-superior-inserters=Advanced inserters built with imersite for unparalleled speed and capacity.
-kr-tesla-coil=Enables the wireless transmission of power into equipment grids.
-kr-tesla-coil-upgrade-mk1=Increases the tesla coil recharge rate.
-kr-tesla-coil-upgrade-mk2=Increases the tesla coil recharge rate.
-kr-tesla-coil-upgrade-mk3=Increases the tesla coil recharge rate.
-kr-tesla-coil-upgrade-mk4=Increases the tesla coil recharge rate.
 light-armor=Light armor for some protection.
 optimization-tech-card=Experients conducted in a microgravity environment produce extremely useful data, greatly benefiting technology on the ground.
 rocket-silo=Extremely complex machines capable of propelling themselves into orbit. Can host experiements in microgravity.
@@ -605,12 +554,14 @@ wm-CreepMiningPollution=Amount of Pollution generated per each Creep tile excava
 wm-CreepMiningTilesPerCycle=Amount of Creep tiles excavated by Creep Miner per work cycle
 wm-CreepCorrosion=Enable Corrosion by Creep
 wm-CounterStrike=Enable Biter's Nests counter-strikes (requires enabled Corrosion)
+wm-CreepMinerHints=Show hints when Creep Miner is blocked
 [mod-setting-description]
 wm-BiomassToBitersReseach=Recommended value is 7, but for double Technology cost value of 4 is recommended.
 wm-CreepMiningPollution=Pollution is generated at miner location. Default value is 1.5 . Reduce accordingly when pollution absorption is decreased (e.g. 0.9 for classic Deathworld map setup).
 wm-CreepMiningTilesPerCycle=Default value is 7. Don't touch it unless you know game balance.
-wm-CreepCorrosion=Any building installed on creep tiles will corrode - loose hitpoints due to acid DoT (Evolution speeds up the process!). Damage effect diminishes with structure health and stops when a few hitpoints % are left.
+wm-CreepCorrosion=Any building installed on creep tiles will corrode - loose hitpoints due to acid DoT (Evolution speeds up the process!). Damage effect diminishes with structure health and stops when a few hitpoints % are left. Changing the setting applies to new events.
 wm-CounterStrike=Biters nests will counter attack with corrosion seeds sometimes when nearby nests are destroyed remotely. Minimum distance to trigger attack increases with evolution. Artillery and nuke fans - beware!
+wm-CreepMinerHints=Show flying text hints about the reason creep miner stopped working while there is still creep in its range.
 
 [virtual-signal-name]
 kr-attention_1=Attention 1
