@@ -2,8 +2,9 @@
 Version: 1.3.8
 Date: 2022-04-?
   Changes:
-      - Mod settings were added. Biters reseach pack recipe default is 7. Please use value 4 for double technology price or when playing less aggressive enemies worlds.
-      To change startup setting Factorio app restart is required. Saved games will use it at next load.
+      - Mod settings were added. Biters reseach data (BRD) recipe default is 7. Please use value 4 for double technology price or when playing less aggressive enemies worlds.
+      To change BRD startup setting Factorio app restart is required. Old games will use it at next load of saved game.
+      - CLI mod settings are removed. Loading old game imports them into mod settings UI.
       - Creep miner goes to sleep immediately on last creep tile harvested.
       - Corrosion marginal case fix.
       - +0.5% corrosion DoT.
